# pico_c_projects

./: README.md  create_pico2_project.sh  create_pico2w_project.sh  create_pico_project.sh  notes.txt
pico2Template/: CMakeLists.txt
pico2Template/src/: CMakeLists.txt  template.c
template/: CMakeLists.txt
template/src/: CMakeLists.txt
